improve SHGetFileInfo

This patch reduces failures of SHGetFileInfo function. CORE-7159